--- a/assets/style.css
+++ b/assets/style.css
@@ -12,6 +12,7 @@ header,
 footer {
     background-color: lightyellow;
     position: static;
+    border-radius: 100px;
    
 }
 
@@ -20,8 +21,6 @@ footer {
     font-size: x-large;
 
 }
-
-
 
 .rightalign {
     text-align: right;
@@ -45,3 +44,23 @@ a:link {
     color: black;
 }
 
+section {
+    background-color: lightyellow;
+    border-radius: 100px;
+    
+}
+
+h1 {
+    text-align: center;
+}
+
+img {
+    border-radius: 100px;
+    display: inline-block;
+    width: 300px;
+    
+}
+
+h3 {
+    text-align: center;
+}
