--- a/assets/style.css
+++ b/assets/style.css
@@ -16,6 +16,25 @@ footer {
    
 }
 
+.rightalign {
+    text-align: right;
+}
+
+.inputsection {
+    text-align: center;
+    height: 220px;
+}
+
+.paragraph {
+    position: absolute;
+    left: 8%;
+    top: 37%;
+    border-style: groove;
+   border-width: 5px;
+   border-color: grey;
+   border-radius: 5px;
+}
+
 #mainname {
     text-align: left;
     font-size: x-large;
@@ -26,14 +45,7 @@ footer {
     height: 30px;
 }
 
-.rightalign {
-    text-align: right;
-}
 
-.inputsection {
-    text-align: center;
-    height: 150px;
-}
 
 ul {
     padding: 30px;
@@ -49,6 +61,10 @@ li {
 
 a:link {
     text-decoration: none;
+    color: black;
+}
+
+a:visited {
     color: black;
 }
 
